--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
-module.exports = {
-    semi: true,
-    printWidth: 120,
-    endOfLine: 'auto',
-    singleQuote: true,
-    useTabs: false,
-    tabWidth: 2,
-    trailingComma: 'all',
-    arrowParens: 'always'
-};
+{
+    "semi": true,
+    "printWidth": 120,
+    "endOfLine": "auto",
+    "singleQuote": true,
+    "useTabs": false,
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "arrowParens": "always"
+}
